infrastructure/03-apps/link/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: karakeep
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
