infrastructure/03-apps/link/manifests/policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: karakeep-policy
  namespace: karakeep
spec:
  endpointSelector:
    matchLabels:
      app: karakeep
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": traefik
            "k8s:app.kubernetes.io/name": traefik
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": alloy
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": karakeep
            "app": karakeep-meilisearch
      toPorts:
        - ports:
            - port: "7700"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": karakeep
            "app": karakeep-chrome
      toPorts:
        - ports:
            - port: "9222"
              protocol: TCP
    - toEntities:
        - world
        - cluster
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: karakeep-meilisearch-policy
  namespace: karakeep
spec:
  endpointSelector:
    matchLabels:
      app: karakeep-meilisearch
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": karakeep
            "app": karakeep
      toPorts:
        - ports:
            - port: "7700"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": alloy
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: karakeep-chrome-policy
  namespace: karakeep
spec:
  endpointSelector:
    matchLabels:
      app: karakeep-chrome
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": karakeep
            "app": karakeep
      toPorts:
        - ports:
            - port: "9222"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": alloy
